# CMake-Best-Practices

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
chapter01/: CMakeLists.txt
chapter01/policy_example/: CMakeLists.txt
chapter01/simple_executable/: CMakeLists.txt
chapter02/: CMakeLists.txt  README.md
chapter02/component1/: CMakeLists.txt
chapter02/component1/include/framework/components/: component1.hpp
chapter02/component1/src/: component1.cpp
chapter02/component2/: CMakeLists.txt
chapter02/component2/include/framework/components/: component2.hpp
chapter02/component2/src/: component2.cpp
chapter02/component_interface/: CMakeLists.txt
chapter02/component_interface/include/framework/components/: component_interface.hpp
chapter02/driver_app/: CMakeLists.txt
chapter03/: CMakeLists.txt
chapter03/hello_header_only/: CMakeLists.txt
chapter03/hello_header_only/include/hello_header_only/: hello_header_only.hpp
chapter03/hello_object_lib/: CMakeLists.txt
chapter03/hello_object_lib/include/hello_object/: hello_object.hpp
chapter03/hello_object_lib/src/: hello_object.cpp
chapter03/hello_shared_lib/: CMakeLists.txt
chapter03/hello_shared_lib/include/hello/: hello.hpp
chapter03/hello_static_lib/: CMakeLists.txt
chapter03/hello_static_lib/include/hello/: hello.hpp
chapter03/hello_static_lib/src/: hello.cpp  internal.cpp  internal.hpp
chapter03/hello_world_standalone/: CMakeLists.txt
chapter03/hello_world_standalone/src/: main.cpp
chapter03/src/: main.cpp
chapter04/: CMakeLists.txt
chapter04/ex01_executable/: CMakeLists.txt
chapter04/ex02_static/: CMakeLists.txt
chapter04/ex02_static/include/chapter4/ex02/: lib.hpp
chapter04/ex02_static/src/: lib.cpp
chapter04/ex03_file/: CMakeLists.txt  chapter4_greeter.py
chapter04/ex04_directory/: CMakeLists.txt
chapter04/ex05_config_file_package/: CMakeLists.txt
chapter04/ex05_config_file_package/include/chapter4/ex05/: lib.hpp
chapter04/ex05_config_file_package/src/: lib.cpp
chapter04/ex05_consumer/: CMakeLists.txt
chapter04/ex05_consumer/src/: main.cpp
chapter04/ex06_pack/: CMakeLists.txt
chapter04/ex06_pack/executable/: CMakeLists.txt
chapter04/ex06_pack/executable/src/: main.cpp
chapter05/: CMakeLists.txt
chapter05/conan_conanfile_example/: CMakeLists.txt
chapter05/conan_conanfile_example/src/: main.cpp
chapter05/conan_example/: CMakeLists.txt
chapter05/conan_example/src/: main.cpp
chapter05/external_project_example/: CMakeLists.txt
chapter05/external_project_example/src/: main.cpp
chapter05/fetch_content_example/: CMakeLists.txt
chapter05/fetch_content_example/src/: main.cpp
chapter05/find_module/cmake/: FindObscure.cmake
chapter05/find_module/dep_source/: CMakeLists.txt
chapter05/find_module/dep_source/include/obscure/: obscure.hpp
chapter05/find_module/dep_source/src/: internal.cpp  internal.hpp  obscure.cpp
chapter05/find_module/src/: main.cpp
chapter05/find_package_example/: CMakeLists.txt
chapter05/find_package_example/src/: main.cpp
chapter05/vcpkg_example/: CMakeLists.txt
chapter05/vcpkg_example/src/: main.cpp
chapter06/: CMakeLists.txt
chapter06/ex01_doxdocgen/: CMakeLists.txt
chapter06/ex01_doxdocgen/include/chapter6/ex01/: calculator.hpp
chapter06/ex01_doxdocgen/src/: calculator.cpp  main.cpp
chapter06/ex02_doxplantuml/: CMakeLists.txt
chapter06/ex02_doxplantuml/src/: main.cpp
